# motorizaYa

Derco/: CMakeLists.txt  FuncionAMayusculas.h  FuncionesAccesoriosLista.h  FuncionesClientesListaSimple.h  FuncionesCompraListaSimple.h  FuncionesDerco.h  FuncionesParteArreglo.h  FuncionesProductosArbol.h  FuncionesProductosArreglo.h  FuncionesRecallsListaSimple.h  FuncionesRegionesArreglo.h  FuncionesRepuestosListaSimple.h  FuncionesSucursalListaCircular.h  FuncionesaAccesoriosArreglo.h  Helpers.h  InterfacesExtras.h  InterfacesYMenus.h  Structs.h  main.c
